plugins {
    id 'maven-publish'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

group = 'de.elmari.reactfx'
version = '2.0.0'

sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17

dependencies {

}

javafx {
    version = "21.0.2"
    modules = [ 'javafx.graphics', 'javafx.controls' ]
}

tasks.withType(JavaCompile) {
    options.compilerArgs += [
            '--add-exports=javafx.base/com.sun.javafx.binding=reactfx'
    ]
}

task sourcesJar(type: Jar) {
    archiveClassifier = 'sources'
    from sourceSets.main.allSource
}

print(System.getenv('GITHUB_USERNAME'));

publishing {
    repositories {
        maven {
            name = "GitHubPackages"
            url = uri("https://maven.pkg.github.com/Elmari/ReactFX")
            credentials {
                username = project.findProperty("gpr.user") ?: System.getenv('GITHUB_USERNAME')
                password = project.findProperty("gpr.key") ?: System.getenv('GITHUB_TOKEN')
            }
        }
    }
    publications {
        gpr(MavenPublication) {
            from(components.java)
        }
    }
}